# monocular_visual_graph_slam

./: .gitignore  CMakeLists.txt  README.md  ardrone_bottom_config.rviz  ardrone_vertical_config.rviz  gslam_config.rviz  package.xml
cmake_modules/: FindG2O.cmake  Findcvsba.cmake  copy.cmake
estimated_trajectories/: correct_1loopclosure_trajectory10.txt_10_100.txt  correct_1loopclosure_trajectory10_2.txt_10_100.txt  final_12_150.txt  final_13_130.txt  final_optimised_12_150.txt  final_optimised_13_130.txt  optimised_trajectory10.txt  optimised_trajectory11.txt  optimised_trajectory11_prev.txt  optimised_trajectory11_prev2.txt  optimised_trajectory11_prev3.txt  optimised_trajectory8.txt  optimised_trajectory9.txt  optimised_trajectory_10_100.txt  optimised_trajectory_12_150.txt  optm_all_loopclsr_1byvar10.txt  optm_cldtrsfrm_loop_clsr10.txt  optm_noloopclsrlnk_1000bycloudodomvar10.txt  optm_noloopclsrlnk_1000bydrift10.txt  optm_noloopclsrlnk_100bycloudodomvar10.txt  optm_noloopclsrlnk_10bydrift10.txt  optm_tst_with_baseline17510.txt  sample_10.txt  testingInfo2_10.txt  testingInfo_10.txt  trajectory1.txt  trajectory10.txt  trajectory10_prev.txt  trajectory11.txt  trajectory4.txt  trajectory7.txt  trajectory8.txt  trajectory9.txt  trajectory_10.txt  trajectory_10_100.txt  trajectory_10_150.txt  trajectory_10_175.txt  trajectory_13_100.txt  trajectory_13_130.txt  trajectory_17510.txt  (+3 more)
ground_truths/: 04_ardrone_front_1.txt  05_ardrone_front_2.txt  06_ardrone_front_square1.txt  07_ardrone_front_square2.txt  08_ardrone_line.txt  09_ardrone_checkerboard_1.txt  10_ardrone_checkerboard_2.txt  11_ardrone_checkerboard_3.txt  12_circle_1.txt  23_ardrone_flight_5.txt
include/gslam/: data_pool.h  data_spot.h  fabmap.h  graph.h  graphslam.h  image_matcher.h  parameters.h  ros_utils.h  ros_visualizer.h  slam_parameters.h  slam_utils.h  transform_estimator.h  typedefs.h
src/: compare_plots.py  compare_trajectories.py  extract_odom_from_bagfile.py  groundtruth_compare.py  main.cpp  rename_image.cpp  test.cpp  test_pub.cpp  trajectory_plotter.py  vis_odo.cpp  vis_odo_node.cpp
src/gslam/: data_pool.cpp  data_spot.cpp  fabmap.cpp  graph.cpp  graphslam.cpp  image_matcher.cpp  ros_utils.cpp  ros_visualizer.cpp  slam_utils.cpp  transform_estimator.cpp
